--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,6 @@ COPY requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-COPY . ./backend
-WORKDIR /backend
-EXPOSE 8000
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+COPY . /app
+
+WORKDIR /app
