--- a/backend/.env_examlple
+++ b/backend/.env_examlple
@@ -1,3 +1,1 @@
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
-MONGO_INITDB_DATABASE=
+MONGODB_URI=mongodb+srv://yourUsername:yourPassword@yourClusterName.n9z04.mongodb.net/sample_mflix?retryWrites=true&w=majority
